<resources>
    <string name="app_name">AI Friender</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About us</string>
    <string name="add_friend_button">Add Friend</string>
    <string name="find_friend_button">Find Friend</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="logout_button">Logout</string>
    <string name="logout_account">Already have an account</string>
    <string name="text_introduce">Wellcome to\nAI Friender</string>
    <string name="et_email">Email</string>
    <string name="et_username">User Name</string>
    <string name="et_birthday">Birthday</string>
    <string name="et_twitter_id">Twitter ID</string>
    <string name="test_description">You can change those values by passing another ones in AvatarPlaceholder constructor or not directly by using IImageLoader class methods/constructors
        \nAvatar background color is calculated using hashCode() method called on a given name String
        \nDefault border width is 2dp and default border color is white.
        \nPlaceholder letters are currently always white (in future user will be able to choose a different color).
        \nIt is recommended to set your default placeholder String as short as possible (the best would be one letter).
        \nTo report a specific problem or feature request, open a new issue on Github.
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="compare_desc">How about personality are you and friend?</string>
</resources>
