<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_introduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginVertical="40dp"
        android:fontFamily="@font/galada"
        android:gravity="center"
        android:text="@string/text_introduce"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <FrameLayout
        android:id="@+id/content_signup_frg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/text_introduce"
        android:layout_above="@+id/btn_ll"
        />

    <LinearLayout
        android:id="@+id/btn_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding"
        android:gravity="center"
        android:layout_alignParentBottom="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/sign_up_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:backgroundTint="@color/background_button"
            app:cornerRadius="@dimen/radius_conner_button"
            android:layout_margin="@dimen/margin"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_btn_sa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/logout_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:backgroundTint="@color/background_button"
            app:cornerRadius="@dimen/radius_conner_button"
            android:layout_margin="@dimen/margin"/>
    </LinearLayout>
</RelativeLayout>