<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Fragments.SignUpUserFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:cardCornerRadius="@dimen/radius_conner_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/twitter_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/background_button"
                android:inputType="textEmailAddress"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin"
                    android:layout_marginBottom="@dimen/margin"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        app:boxCornerRadiusBottomEnd="@dimen/radius_conner_button"
                        app:boxCornerRadiusBottomStart="@dimen/radius_conner_button"
                        app:boxCornerRadiusTopEnd="@dimen/radius_conner_button"
                        app:boxCornerRadiusTopStart="@dimen/radius_conner_button">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/et_email"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        app:boxCornerRadiusBottomEnd="@dimen/radius_conner_button"
                        app:boxCornerRadiusBottomStart="@dimen/radius_conner_button"
                        app:boxCornerRadiusTopEnd="@dimen/radius_conner_button"
                        app:boxCornerRadiusTopStart="@dimen/radius_conner_button">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_name_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/et_username"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        app:boxCornerRadiusBottomEnd="@dimen/radius_conner_button"
                        app:boxCornerRadiusBottomStart="@dimen/radius_conner_button"
                        app:boxCornerRadiusTopEnd="@dimen/radius_conner_button"
                        app:boxCornerRadiusTopStart="@dimen/radius_conner_button">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/dob_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="false"
                            android:hint="@string/et_birthday"
                            android:inputType="none"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        app:boxCornerRadiusBottomEnd="@dimen/radius_conner_button"
                        app:boxCornerRadiusBottomStart="@dimen/radius_conner_button"
                        app:boxCornerRadiusTopEnd="@dimen/radius_conner_button"
                        app:boxCornerRadiusTopStart="@dimen/radius_conner_button">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:inputType="phone"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="Gender: "
                            android:textAlignment="center" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Male" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Female" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Other" />
                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>